--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "todo-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Todo API with Express and PostgreSQL",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
